<resources>
    <string name="technology_app_name">technology</string>
    <string name="technology_copy_url">复制链接</string>
    <string name="technology_open_url">打开链接</string>
    <string name="technology_network_connectionless">No address associated with hostname</string>
    <string name="technology_network_connectionless_chinese">网络无连接</string>
    <string name="technology_result_empty">results is empty</string>
    <string name="technology_welfare">Welfare</string>
    <string name="technology_android">Android</string>
    <string name="technology_ios">IOS</string>
    <string name="technology_app">App</string>
    <string name="technology_all_chinese">全部</string>
    <string name="technology_all">all</string>
    <string name="technology_iOS">iOS</string>
    <string name="technology_front">前端</string>
    <string name="technology_recommend">瞎推荐</string>
    <string name="technology_video">休息视频</string>
    <string name="technology_expand">拓展资源</string>
    <string name="technology_welfare_chinese">福利</string>
    <string name="technology_refresh">refresh</string>
    <string name="technology_director">导演：</string>
    <string name="technology_performer">主演：</string>
    <string name="technology_more_info">更多信息</string>
    <string name="technology_issues">Issues</string>
    <string name="technology_change_item">调整栏目顺序</string>
    <string name="technology_request_data_failure">获取数据失败</string>
    <string name="technology_save">保存</string>
    <string name="technology_spot" >&#160;·&#160;</string>
    <string name="technology_loading">努力加载中&#8230;</string>
</resources>
