<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/gank_all"
        android:icon="@drawable/home_title_all"
        android:title="@string/technology_all_chinese" />
    <item
        android:id="@+id/gank_android"
        android:icon="@drawable/home_title_android"
        android:title="@string/technology_android" />
    <item
        android:id="@+id/gank_ios"
        android:icon="@drawable/home_title_ios"
        android:title="@string/technology_ios" />
    <item
        android:id="@+id/gank_app"
        android:icon="@drawable/home_title_app"
        android:title="@string/technology_app" />
    <item
        android:id="@+id/gank_qian"
        android:icon="@drawable/home_title_qian"
        android:title="@string/technology_front" />
    <item
        android:id="@+id/gank_xia"
        android:icon="@drawable/home_title_xia"
        android:title="@string/technology_recommend" />
    <item
        android:id="@+id/gank_movie"
        android:icon="@drawable/home_title_movie"
        android:title="@string/technology_video" />
    <item
        android:id="@+id/gank_resource"
        android:icon="@drawable/home_title_source"
        android:title="@string/technology_expand" />
</menu>